[package]
name = "sysfs"
version = "0.0.1"
authors = ["Jacob Birkett <support@birkett.dev>"]
homepage = "https://github.com/spikespaz/sysfs-rs"
repository = "https://github.com/spikespaz/sysfs-rs"
license = "MIT"
edition = "2021"

[dependencies]
strum = { version = "0.25.0", features = ["derive"] }
sysfs_lib = { path = "./sysfs_lib" }
sysfs_macros = { path = "./sysfs_macros" }
