[workspace]
members = ["sysfs_lib", "sysfs_macros"]
resolver = "2"

[workspace.package]
description = "Proc-macro helpers for writing large swaths of ergonomic wrappers around Linux sysfs attributes."
authors = ["Jacob Birkett <support@birkett.dev>"]
homepage = "https://github.com/spikespaz/sysfs-rs"
repository = "https://github.com/spikespaz/sysfs-rs"
license = "MIT"
edition = "2021"

[package]
name = "sysfs"
version = "0.0.2"
description.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
strum = { version = "0.25.0", features = ["derive"] }
sysfs_lib = { version = "=0.0.1", path = "./sysfs_lib" }
sysfs_macros = { version = "=0.0.1", path = "./sysfs_macros" }
